@@ -9,6 +9,7 @@ import deu.cse.spring_webmail.model.AgentFactory;
 import deu.cse.spring_webmail.model.ImageManager;
 import deu.cse.spring_webmail.model.Pop3Agent;
 import deu.cse.spring_webmail.model.UserAdminAgent;
+import jakarta.mail.Message;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
@@ -18,7 +19,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.mock.web.MockHttpSession;
-import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 
@@ -34,24 +34,18 @@ import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.eq;
 
 @WebMvcTest(SystemController.class)
-@TestPropertySource(properties = {
-    "root.id=test_root",
-    "root.password=test_password",
-    "admin.id=admin@webmail.com",
-    "james.control.port=9999",
-    "james.host=test.webmail.com"
-})
-public class SystemControllerTest {
+
+class SystemControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
-
+    
     @MockBean
     private AgentFactory agentFactory;
-
+    
     @MockBean
     private ImageManager imageManager;
-
+    
     private static final int COMMAND_LOGIN = 91;
     private static final int COMMAND_LOGOUT = 92;
 
@@ -67,9 +61,9 @@ public class SystemControllerTest {
     @Test
     void loginAdminSuccessTest() throws Exception {
         String testUserid = "admin@webmail.com";
-        String testPassword = "admin_password";
+        String testPassword = "admin";
         String testHost = "test.webmail.com";
-
+        
         Pop3Agent mockPop3Agent = Mockito.mock(Pop3Agent.class);
 
         // agentFactory 클래스의 pop3AgentCreate 메서드가 실행될 경우 mockPop3Agent를 리턴함
@@ -92,23 +86,23 @@ public class SystemControllerTest {
                 .andExpect(status().is3xxRedirection())
                 .andExpect(redirectedUrl("/admin_menu"));
     }
-
+    
     @Test
     void loginUserSuccessTest() throws Exception {
         String testUserid = "test@webmail.com";
         String testPassword = "test_password";
         String testHost = "test.webmail.com";
-
+        
         Pop3Agent mockPop3Agent = Mockito.mock(Pop3Agent.class);
-
+        
         BDDMockito.given(agentFactory.pop3AgentCreate(
                 anyString(),
                 eq(testUserid),
                 eq(testPassword))
         ).willReturn(mockPop3Agent);
-
+        
         BDDMockito.given(mockPop3Agent.validate()).willReturn(true);
-
+        
         mockMvc.perform(MockMvcRequestBuilders.post("/login.do")
                 .param("menu", String.valueOf(COMMAND_LOGIN))
                 .param("userid", testUserid)
@@ -118,23 +112,23 @@ public class SystemControllerTest {
                 .andExpect(status().is3xxRedirection())
                 .andExpect(redirectedUrl("/main_menu"));
     }
-
+    
     @Test
     void loginFailTest() throws Exception {
         String testUserid = "fail@webmail.com";
         String testPassword = "wrong_password";
         String testHost = "test.webmail.com";
-
+        
         Pop3Agent mockPop3Agent = Mockito.mock(Pop3Agent.class);
-
+        
         BDDMockito.given(agentFactory.pop3AgentCreate(
                 anyString(),
                 eq(testUserid),
                 eq(testPassword))
         ).willReturn(mockPop3Agent);
-
+        
         BDDMockito.given(mockPop3Agent.validate()).willReturn(false);
-
+        
         mockMvc.perform(MockMvcRequestBuilders.post("/login.do")
                 .param("menu", String.valueOf(COMMAND_LOGIN))
                 .param("userid", testUserid)
@@ -144,12 +138,12 @@ public class SystemControllerTest {
                 .andExpect(status().is3xxRedirection())
                 .andExpect(redirectedUrl("/login_fail"));
     }
-
+    
     @Test
     void logoutTest() throws Exception {
         MockHttpSession session = new MockHttpSession();
         session.setAttribute("userid", "loggedInUser");
-
+        
         mockMvc.perform(MockMvcRequestBuilders.get("/login.do")
                 .param("menu", String.valueOf(COMMAND_LOGOUT))
                 .session(session)
@@ -157,7 +151,7 @@ public class SystemControllerTest {
                 .andExpect(status().is3xxRedirection())
                 .andExpect(redirectedUrl("/"));
     }
-
+    
     @Test
     void loginFailViewTest() throws Exception {
         mockMvc.perform(MockMvcRequestBuilders.get("/login_fail"))
@@ -169,13 +163,13 @@ public class SystemControllerTest {
     @Test
     void mainMenuTest() throws Exception {
         Pop3Agent mockPop3Agent = Mockito.mock(Pop3Agent.class);
-
+        Message mockMessage = Mockito.mock(Message.class);
+        
         BDDMockito.given(agentFactory.pop3AgentCreate(anyString(), anyString(), anyString()))
                 .willReturn(mockPop3Agent);
-
-        String dummyMessageList = "messageList";
-        BDDMockito.given(mockPop3Agent.getMessageList()).willReturn(dummyMessageList);
-
+        
+        Mockito.when(mockPop3Agent.getMessages()).thenReturn(new Message[]{mockMessage});
+        
         mockMvc.perform(MockMvcRequestBuilders.get("/main_menu")
                 .sessionAttr("host", "test.webmail.com")
                 .sessionAttr("userid", "testuser@webmail.com")
@@ -185,27 +179,57 @@ public class SystemControllerTest {
                 .andExpect(view().name("main_menu"))
                 .andExpect(model().attributeExists("totalPages"))
                 .andExpect(model().attributeExists("messageList"));
-
+        
     }
-
+    
+    @Test
+    void searchMailTest() throws Exception {
+        Pop3Agent mockPop3Agent = Mockito.mock(Pop3Agent.class);
+        Message mockMessage = Mockito.mock(Message.class);
+        
+        BDDMockito.given(agentFactory.pop3AgentCreate(anyString(), anyString(), anyString()))
+                .willReturn(mockPop3Agent);
+        
+        Mockito.when(mockPop3Agent.getMessages()).thenReturn(new Message[]{mockMessage});
+        
+        mockMvc.perform(MockMvcRequestBuilders.post("/search_mail")
+                .param("keyword", "검색내용")
+                .param("sort", "desc")
+                .param("page", "1")
+                .sessionAttr("host", "test.webmail.com")
+                .sessionAttr("userid", "testuser@webmail.com")
+                .sessionAttr("password", "testpassword")
+        )
+                .andExpect(status().isOk())
+                .andExpect(view().name("main_menu"))
+                .andExpect(model().attributeExists("totalPages"))
+                .andExpect(model().attributeExists("messageList"));
+        
+    }
+    
     @Test
     void adminMenuTest() throws Exception {
+        
+        MockHttpSession session = new MockHttpSession();
+        session.setAttribute("userid", "admin@webmail.com");
+        
         UserAdminAgent mockUserAdminAgent = Mockito.mock(UserAdminAgent.class);
-
+        
         BDDMockito.given(agentFactory.userAdminAgentCreate(
                 anyString(), anyInt(), anyString(),
                 anyString(), anyString(), anyString()
         )).willReturn(mockUserAdminAgent);
-
+        
         List<String> dummyUserList = java.util.Arrays.asList("user1@test.com", "user2@test.com", "admin@webmail.com");
         BDDMockito.given(mockUserAdminAgent.getUserList()).willReturn(dummyUserList);
-
+        
         mockMvc.perform(MockMvcRequestBuilders.get("/admin_menu")
+                .session(session)
         )
                 .andExpect(status().isOk())
                 .andExpect(view().name("admin/admin_menu"))
                 .andExpect(model().attributeExists("userList"))
-                .andExpect(model().attribute("userList", dummyUserList.stream().sorted().collect(java.util.stream.Collectors.toList())));
+                .andExpect(model().attribute("userList", dummyUserList.stream().sorted().toList()));
     }
 
     // 유저 추가
@@ -222,15 +246,14 @@ public class SystemControllerTest {
     void addUserDoSucessTest() throws Exception {
         String testUserid = "newuser@webmail.com";
         String testPassword = "newuser";
-
+        
         UserAdminAgent mockAdminAgent = Mockito.mock(UserAdminAgent.class);
-
+        
         BDDMockito.given(agentFactory.userAdminAgentCreate(
                 anyString(), anyInt(), anyString(),
                 anyString(), anyString(), anyString()
         )).willReturn(mockAdminAgent);
-
-        BDDMockito.given(mockAdminAgent.addUser(eq(testUserid), eq(testPassword)))
+        BDDMockito.given(mockAdminAgent.addUser(testUserid, testPassword))
                 .willReturn(true);
         mockMvc.perform(MockMvcRequestBuilders.post("/add_user.do")
                 .param("id", testUserid)
@@ -241,19 +264,19 @@ public class SystemControllerTest {
                 .andExpect(flash().attributeExists("msg"))
                 .andExpect(flash().attribute("msg", String.format("사용자(%s) 추가를 성공하였습니다.", testUserid)));
     }
-
+    
     @Test
     void addUserDoFailTest() throws Exception {
         String testUserid = "newuser@test.com";
         String testPassword = "newuser";
-
+        
         UserAdminAgent mockAdminAgent = Mockito.mock(UserAdminAgent.class);
         BDDMockito.given(agentFactory.userAdminAgentCreate(
                 anyString(), anyInt(), anyString(),
                 anyString(), anyString(), anyString()
         )).willReturn(mockAdminAgent);
 
-        BDDMockito.given(mockAdminAgent.addUser(eq(testUserid), eq(testPassword)))
+        BDDMockito.given(mockAdminAgent.addUser(testUserid, testPassword))
                 .willReturn(false);
         mockMvc.perform(MockMvcRequestBuilders.post("/add_user.do")
                 .param("id", testUserid)
@@ -269,35 +292,35 @@ public class SystemControllerTest {
     // 페이지
     @Test
     void deleteUserTest() throws Exception {
-
+        
         UserAdminAgent mockUserAdminAgent = Mockito.mock(UserAdminAgent.class);
-
+        
         BDDMockito.given(agentFactory.userAdminAgentCreate(
                 anyString(), anyInt(), anyString(),
                 anyString(), anyString(), anyString()
         )).willReturn(mockUserAdminAgent);
-
+        
         List<String> dummyUserList = java.util.Arrays.asList("user1@test.com", "user2@test.com", "admin@webmail.com");
         BDDMockito.given(mockUserAdminAgent.getUserList()).willReturn(dummyUserList);
-
+        
         mockMvc.perform(MockMvcRequestBuilders.get("/delete_user"))
                 .andExpect(status().isOk())
                 .andExpect(view().name("admin/delete_user"))
                 .andExpect(model().attributeExists("userList"))
-                .andExpect(model().attribute("userList", dummyUserList.stream().sorted().collect(java.util.stream.Collectors.toList())));
+                .andExpect(model().attribute("userList", dummyUserList.stream().sorted().toList()));
     }
 
     // 유저 삭제 do
     @Test
     void deleteUserDoTest() throws Exception {
         String[] testUserids = {"deleteuser@webmail.com"};
-
+        
         UserAdminAgent mockAdminAgent = Mockito.mock(UserAdminAgent.class);
         BDDMockito.given(agentFactory.userAdminAgentCreate(
                 anyString(), anyInt(), anyString(),
                 anyString(), anyString(), anyString()
         )).willReturn(mockAdminAgent);
-
+        
         BDDMockito.given(mockAdminAgent.deleteUsers(testUserids))
                 .willReturn(true);
         mockMvc.perform(MockMvcRequestBuilders.post("/delete_user.do")
@@ -314,12 +337,12 @@ public class SystemControllerTest {
 
         // 가짜 이미지 바이트 데이터
         byte[] fakeImageBytes = "test-image-byte".getBytes();
-
+        
         BDDMockito.given(imageManager.getImageBytes(anyString(), eq(fakeImageName))).willReturn(fakeImageBytes);
-
+        
         mockMvc.perform(MockMvcRequestBuilders.get("/get_image/" + fakeImageName))
                 .andExpect(status().isOk())
                 .andExpect(content().bytes(fakeImageBytes));
     }
-
+    
 }
